fixed the clockin code to store as json instead

--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,9 @@
 		%sveltekit.head%
   </head>
   <body>
-    %sveltekit.body%
-    
+    <div style="display: contents">
+      %sveltekit.body%
+    </div>
     <script>
       // Register service worker
       if ('serviceWorker' in navigator) {
