--- a/src/app.html
+++ b/src/app.html
@@ -12,13 +12,13 @@
       %sveltekit.body%
     </div>
     <script>
-      // Register service worker
+      // script to auto update the pwa when the service-worker version change
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          navigator.serviceWorker.register('./service-worker.js')
             .then(registration => {
-              // Check for updates every hour
-              setInterval(() => registration.update(), 60 * 60 * 1000); 
+              // Check for updates hourly
+              setInterval(() => registration.update(), 3600); 
               
               // Listen for the service worker's state changes
               registration.addEventListener('updatefound', () => {
@@ -38,13 +38,7 @@
         });
         
         // Listen for controller changes (when a new service worker takes over)
-        let refreshing = false;
-        navigator.serviceWorker.addEventListener('controllerchange', () => {
-          if (!refreshing) {
-            window.location.reload();
-            refreshing = true;
-          }
-        });
+        navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload());
       }
     </script>
   </body>
