--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
   </head>
-  <body>    
+  <body>   
+    <link rel="stylesheet" href="https://payway.ababank.com/checkout-popup.html?file=css"/>
+		<script src="https://payway.ababank.com/checkout-popup.html?file=js"></script>
     <script>
       window.addEventListener('beforeinstallprompt', e => window.deferredInstallPrompt = e);
     </script>
